# respeaker-console

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: index.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/05-07-respeaker-xvf-app/: check.jsonl  prd.md  task.json
.trellis/workspace/sw/: index.md  journal-1.md
docs/: AUTO_UPDATE.md  AUTO_UPDATE.zh-CN.md  GLOBAL_SHORTCUT.md  GLOBAL_SHORTCUT.zh-CN.md  I18N.md  I18N.zh-CN.md  reSpeaker.md
src/: index.css  main.tsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/: system_tray.rs
src-tauri/src/xvf/: commands.rs  device.rs  mod.rs  parameters.rs
src/components/: app-sidebar.tsx  settings-panel.tsx  title-bar.tsx  updater-dialog.tsx  window-frame.tsx
src/components/ui/: badge.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  tabs.tsx
src/components/xvf/: audio-panel.tsx  config-panel.tsx  connection-status.tsx  device-panel.tsx  doa-compass.tsx  led-panel.tsx  logs-panel.tsx  monitor-panel.tsx
src/hooks/: use-updater.ts  use-xvf.ts
src/i18n/locales/: en.json  zh.json
src/lib/: window.ts
src/lib/xvf/: catalog.ts  client.ts  format.ts  mock.ts  (+1 more)
src/pages/: about.tsx  home.tsx  settings.tsx
(+7 files in other folders)
